<resources>
    <!--   <string name="yandex_map_key">44189d05-a0ac-42a3-ad87-2d5741d709dc</string>-->
    <string name="yandex_map_key">948e55bc-da44-452d-9629-00898d438ca9</string>
    <string name="sentry_url">https://f52d405267944551b65123facccf3d2c@sentry.soyuz317.ru/17</string>

    <string name="hint__search_by_address">по адресу</string>
    <string name="act_st_art_it_test_version">Тестовая версия (%1$s). \n За рабочей версией обратитесь, пожалуйста, в клиентский сервис</string>
    <string name="enter_system">Вход в систему</string>
    <string name="login">Логин</string>
    <string name="password">Пароль</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="logout">Выйти из системы </string>
    <string name="change_owner">Сменить организацию</string>
    <string name="change_role">Сменить роль</string>
    <string name="loading">Загрузка</string>
    <string name="choose">Выбрать</string>
    <string name="choose_all_in">Взять все</string>
    <string name="take_selected">Взять выбранные</string>
    <string name="tv_no_fount_data">Список Путевых Листов пуст</string>
    <string name="choose_vehicle">Выбрать автомобиль</string>
    <!--   <string name="yandex_map_key">f7873ee7-b6a0-4527-8df1-215f37ba0f97</string>-->
    <string name="accept_task">Взяв в работу сменное задание, вы не сможете его поменять до завершения</string>
    <string name="accept_task_check">Взять задание в работу</string>
    <string name="no_images_selected">Изображение не выбрана</string>
    <string name="n_images_selected">Фотографии выбраны</string>
    <string name="photo_save_error_toast">Неизвестная ошибка камеры</string>
    <string name="cancel">Отменить</string>
    <string name="done">Добавить</string>
    <string name="warning_detele">Вы действительно хотите удалить?</string>
    <string name="capture_button_alt">Capture</string>
    <string name="switch_camera_button_alt">Switch camera</string>
    <string name="gallery_button_alt">Gallery</string>
    <string name="back_button_alt">Back</string>
    <string name="share_button_alt">Share</string>
    <string name="share_hint">Share using</string>
    <string name="capture_mode_camera">Camera</string>
    <string name="capture_mode_hdr">HDR</string>
    <string name="capture_mode_night">Night</string>
    <string name="delete_button_alt">Delete</string>
    <string name="end_task">Досрочное завершение</string>
    <string name="problem_on_point">Невывоз\nплощадки</string>
    <string name="container_fail">Все оставшиеся контейнеры на площадке будут помечены как невывезенные.</string>
    <string name="finish_way">Завершить маршрут</string>
    <string name="finish_way_now">Досрочно завершить маршрут</string>
    <string name="send">Отправить</string>
    <string name="weight_t">Вес (т)</string>
    <string name="volume_cub">Объем (куб .м.)</string>
    <string name="enter_weight_hint">Введите вес (в тоннах)</string>
    <string name="enter_volume_hint">Введите объем (в куб .м.)</string>
    <string name="success_complete">Сменное задание завершено Вы можете выбрать другое задание или завершить смену</string>
    <string name="goto_location_on_map">      <u>на карте</u></string>
    <string name="clear_comment"><u>Очистить</u>.</string>
    <string name="cancel_clear"><u>Отменить и скрыть</u>.</string>

    <plurals name="container_count">
        <item quantity="zero">конейтер</item>
        <item quantity="one">контейнер</item>
        <item quantity="two">контейнера</item>
        <item quantity="few">контейнера</item>
        <item quantity="many">контейнеров</item>
        <item quantity="other">контейнер(ов)</item>
    </plurals>

    <plurals name="region_count">
        <item quantity="zero">регион</item>
        <item quantity="one">регион</item>
        <item quantity="two">региона</item>
        <item quantity="few">региона</item>
        <item quantity="many">регионов</item>
        <item quantity="other">регион(ов)</item>
    </plurals>
    <plurals name="region_downloaded">
        <item quantity="zero">Скачан</item>
        <item quantity="one">Скачан</item>
        <item quantity="two">Скачано</item>
        <item quantity="few">Скачано</item>
        <item quantity="many">Скачано</item>
        <item quantity="other">Скачан(о)</item>
    </plurals>

    <string name="title_activity_test">TestActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="kgo">Крупногабаритные отходы</string>
    <string name="way_is_exist">У вас уже есть построенный маршрут. Отменить старый и построить новый?</string>
    <string name="error_build_way">Невозможно построить маршрут, повторите попытку.</string>

    <string name="dialog_platform_clicked_dtl__containers_cnt">конт. на площадке %s</string>
    <string name="dialog_platform_clicked_dtl__address">%s \n %s</string>
    <string name="start_serve">Начать обслуживание</string>
    <string name="start_serve_again">Продолжить обслуживание</string>
    <string name="dialog_platform_clicked_dtl__serve_again">Редактировать / Дополнить</string>
    <string name="problem_container">Невывоз контейнера</string>
    <string name="channel_description">CHANNEL_DESCRIPTION_FACT_WORKNOTE</string>
    <string name="channel_name">CHANNEL_NAME_FACT_WORKNOTE</string>
    <string name="walkthrough_simplify_serve_step_a">\nВ этом режиме можно сгруппировать контейнеры.\n
        \nТеперь несколько контейнеров одного типа или организации обслуживать удобнее и быстрее.\n
        \nТакже нажав на Плюс, можно добавить \"подбор\".</string>
    <string name="walkhrough_step_b_a">Переключение между режимами.</string>
    <string name="walkhrough_step_b_b">Кол-во контейнеров на КП. \nПлюсом добавляется \"подбор\"</string>
    <string name="walkhrough_step_b_c">Фото \"до\" и \"после\" для каждого контейнера.</string>
    <string name="walkhrough_step_b_d">Кол-во сгруппированных контейнеров по типу</string>
	
	<string name="warning_airplane_mode">На Вашем устройстве включен режим \"В самолёте\". Ваш прогресс сохраняется вне зависимости от наличия интернета, однако данное действие будет зафиксировано.</string>
    <string name="warning_connection_lost">На Вашем устройстве отсутствует подключение к интернету. Ваш прогресс сохраняется вне зависимости от наличия интернета, однако данное действие будет зафиксировано.</string>
    <string name="warning_gps_off">На Вашем устройстве выключен GPS. Ваш прогресс сохраняется вне зависимости от возможности определить местоположение, однако данное действие будет зафиксировано.</string>
    <string name="warning_gps_exception"> Вы находитесь слишком далеко от
            контейнерной площадки.
        \nВы уверены, что хотите взять в работу эту КП?
    </string>
    <string name="info_unload">В режима \"Выгрузка\" запрещено обслуживать КП
    </string>
    <string name="car_locked">Чтобы видеть заполненность мусоровоза в приложении необходимо приобрести датчик заполненности.\nОбратитесь к менеджеру для подключения.</string>
    <string name="gas_locked">Чтобы видеть уровень топлива в приложении необходимо приобрести датчик уровня топлива.\nОбратитесь к менеджеру для подключения.</string>
    <string name="photo_locked">Чтобы делать фото с помощью навесных камер не выходя из машины необходимо приобрести комплект камер. Обратитесь к менеджеру для подключения.</string>
    <string name="need_cleanup">На данной Контейнерной Площадке необходимо обслужить все контейнеры, подобрать лишний мусор и произвести визуальную уборку. Фотографии данной КП должны быть максимально качественными. Фото могут быть использованы для отправки в прокуратуру.</string>
    <string name="different_unload_points">Выбранные Вами сменные задания имеют разные точки выгрузки. Пожалуйста, свяжитесь с диспетчером.</string>
    <string name="user_is_blocked">Пользователь заблокирован\nОбратитесь к Диспетчеру</string>
    <string name="f_unload_info__info">При активации режима \"Выгрузка\" будет
            построен маршрут до точки выгрузки отходов, указанной в сменном задании.
        \nВы не сможете обслуживать КП в данном режиме.
        \nПосле выхода из режима \"Выгрузка\", будет предложено заполнить Тикет.
            Для этого, после прибытия на точку выгрузки отходов,
        снова нажмите на кнопку "Выгрузка" на карте (кнопка будет другого цвета).
    </string>
    <string name="f_unload_info__info_start">Чтобы перейти в режим "Выгрузка", проведите зелёную кнопку вправо.</string>
    <string name="swipe_right_to_start">Проведите вправо,\nчтобы начать</string>
</resources>