<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.choose.owner_1.OrganisationActivity">

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/choose_rv"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="vertical"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        app:layout_constraintBottom_toTopOf="@id/next_btn"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/empty_title"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:textSize="18sp"
        android:visibility="gone"
        tools:text="Пусто, ничего не видно."
        tools:visibility="visible" />

    <Button
        android:id="@+id/next_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/colorPrimary"
        android:text="@string/choose"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent" />

    <Button
        android:id="@+id/choose_vehicle"
        android:layout_width="match_parent"
        android:visibility="gone"
        tools:visibility="visible"
        android:layout_height="wrap_content"
        android:text="@string/choose_vehicle"
        app:layout_constraintBottom_toTopOf="@id/logout_btn" />

    <Button
        android:id="@+id/logout_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/dark_red"
        android:text="@string/logout"
        android:visibility="gone"
        tools:visibility="visible"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>