<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/pp__toolbar"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:background="?attr/colorPrimaryDark"/>

    <FrameLayout
        android:id="@+id/pp__pager"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/pp__bottom_bar"
        android:layout_below="@+id/pp__toolbar" />

    <LinearLayout
        android:id="@+id/pp__bottom_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:dividerPadding="8dp"
        android:orientation="vertical"
        android:showDividers="middle">

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="62dp">

            <HorizontalScrollView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:fillViewport="false"
                android:foregroundGravity="left"
                android:paddingBottom="1dp"
                android:paddingTop="1dp">

                <LinearLayout
                    android:id="@+id/pp__selected_photos_container"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_gravity="left"
                    android:animateLayoutChanges="true"
                    android:orientation="horizontal"
                    android:visibility="gone" />
            </HorizontalScrollView>

            <TextView
                android:id="@+id/pp__selected_photos_empty"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/no_images_selected"
                android:textAppearance="?android:attr/textAppearanceSmall" />
        </FrameLayout>

        <LinearLayout
            android:id="@+id/pp__button_bar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <Button
                android:id="@+id/pp__btn_cancel"
                style="?android:buttonBarButtonStyle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/cancel" />

            <Button
                android:id="@+id/pp__btn_done"
                style="?android:buttonBarButtonStyle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/done" />
        </LinearLayout>
    </LinearLayout>

</RelativeLayout>