<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    android:orientation="vertical">

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rv_act_start_waybill"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        />
    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:visibility="gone">
        <TextView
            android:id="@+id/empty_title"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:textSize="18sp"
            android:visibility="gone"
            tools:text="Пусто, ничего не видно."
            tools:visibility="visible" />

        <Button
            android:id="@+id/act_choose_select_all"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/choose"
            android:layout_margin="@dimen/margin_default"
            android:background="@drawable/bg_button"
            android:textColor="@color/white"
            app:layout_constraintBottom_toBottomOf="parent" />

        <Button
            android:id="@+id/choose_vehicle"
            android:layout_width="match_parent"
            android:visibility="gone"
            tools:visibility="visible"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margin_default"
            android:layout_marginBottom="6dp"
            android:text="@string/choose_vehicle"
            android:background="@drawable/bg_button_white"
            app:layout_constraintBottom_toTopOf="@id/logout_btn" />

        <Button
            android:id="@+id/logout_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margin_default"
            android:background="@drawable/bg_button_red"
            android:text="@string/logout"
            android:visibility="gone"
            tools:visibility="visible"
            android:textColor="@color/white"
            app:layout_constraintBottom_toBottomOf="parent" />
    </androidx.appcompat.widget.LinearLayoutCompat>
</androidx.constraintlayout.widget.ConstraintLayout>

