<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.auth.AuthActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="@id/auth_enter"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/image_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:src="@drawable/ic_logo"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_default"
            android:gravity="center_horizontal"
            android:text="@string/enter_system"
            android:textColor="@color/black"
            android:textSize="18sp" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/login_login_out"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/margin_default"
            android:layout_marginTop="24dp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/auth_login"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/login"
                android:inputType="textEmailAddress"
                android:textColor="@color/black"
                android:textColorHint="@color/black" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/auth_password_out"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/margin_default"
            app:passwordToggleEnabled="true"
            android:layout_marginTop="24dp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/auth_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:textColor="@color/black"
                android:textColorHint="@color/black" />

        </com.google.android.material.textfield.TextInputLayout>

    </LinearLayout>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/auth_enter"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/margin_default"
        android:layout_marginBottom="@dimen/margin_default"
        android:layout_margin="@dimen/margin_default"
        android:background="@drawable/bg_button"
        android:text="Войти в систему"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>