<?xml version="1.0" encoding="utf-8"?>
<!--f_complete_early__act_map__rv_item.xml-->
<androidx.appcompat.widget.LinearLayoutCompat
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent" android:layout_height="wrap_content"
    android:orientation="vertical"
    android:background="@color/red_cool"
    >
    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/acb_f_complete_early__final_results_workorder_name"
        android:layout_width="match_parent" android:layout_height="wrap_content"
        android:gravity="center"
        android:maxLines="2"
        android:textColor="@color/black" android:textSize="13sp"
        android:layout_marginTop="@dimen/margin_min"
        android:layout_marginBottom="@dimen/margin_min"
        android:text="id/acb_f_complete_early__final_results_workorder_name"
        />
    <androidx.appcompat.widget.AppCompatTextView
        android:layout_width="match_parent" android:layout_height="wrap_content"
        android:gravity="center" android:layout_marginBottom="@dimen/margin_min"
        android:textColor="@color/black" android:textSize="12sp"
        android:text="@string/container_fail"
        />
    <androidx.appcompat.widget.AppCompatAutoCompleteTextView
        android:id="@+id/actv_f_complete_early__reason"
        android:layout_width="match_parent" android:layout_height="25dp"
        android:gravity="center" android:editable="false"
        android:layout_marginStart="@dimen/margin_max_max"
        android:layout_marginEnd="@dimen/margin_max_max"
        android:background="@drawable/bg_button_red_interactive"
        android:textColorHint="@color/black" android:textColor="@color/black"
        android:textSize="12sp"
        android:hint="выберите причину невывоза"
        />

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent" android:layout_height="wrap_content"
        android:orientation="vertical">

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="25dp"
            android:orientation="horizontal"
            android:layout_marginStart="@dimen/margin_max_max"
            android:layout_marginEnd="@dimen/margin_max_max"
            android:layout_marginTop="@dimen/margin_min"
            >

            <androidx.appcompat.widget.AppCompatToggleButton
                android:id="@+id/tb_f_complete_early__type_weight"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textOn="@string/weight_t"
                android:textOff="@string/weight_t"
                android:layout_weight="0.5"
                android:textSize="11sp"
                android:background="@drawable/selector_left_finish"
                />

            <androidx.appcompat.widget.AppCompatToggleButton
                android:id="@+id/tb_f_complete_early__type_volume"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textOn="@string/volume_cub"
                android:textOff="@string/volume_cub"
                android:textSize="11sp"
                android:layout_weight="0.5"
                android:background="@drawable/selector_right_finish"
                />
        </androidx.appcompat.widget.LinearLayoutCompat>
        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent" android:layout_height="wrap_content"
            android:orientation="horizontal" android:layout_marginTop="@dimen/margin_min"
            android:layout_marginStart="@dimen/margin_min"
            android:layout_marginEnd="@dimen/margin_default"
            >

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/til_f_complete_early__total_volume"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_marginEnd="@dimen/margin_max_max"
                android:background="@color/red_cool"
                android:hint="выберите вид измерения"

                >

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/tiet_f_complete_early__total_volume"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:inputType="numberDecimal"
                    android:gravity="top" />

            </com.google.android.material.textfield.TextInputLayout>
            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/acb_f_complete_early__accept"
                android:layout_width="130dp"
                android:layout_height="wrap_content"
                android:paddingStart="@dimen/margin_default"
                android:paddingEnd="@dimen/margin_default"
                android:layout_gravity="center"
                android:background="@drawable/bg_button_red_interactive"
                android:text="Подтвердить"
                />

        </androidx.appcompat.widget.LinearLayoutCompat>
        <View
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:background="@color/gray"
            android:layout_marginStart="@dimen/margin_min"
            android:layout_marginEnd="@dimen/margin_min"

            />
    </androidx.appcompat.widget.LinearLayoutCompat >

</androidx.appcompat.widget.LinearLayoutCompat>